gcc/testsuite/g++.dg/warn/Wdtor1.C
@@ -1,0 +1,18 @@
+// PR c++/20145
+// { dg-options "-Wnon-virtual-dtor" }
+# 1 "t.cc"
+# 1 "<built-in>"
+# 1 "<command line>"
+# 1 "t.cc"
+# 1 "include/t.h" 1 3 4
+template <int> class t
+{
+  virtual void f();
+};
+# 2 "t.cc" 2
+
+void f(void)
+{
+  t<1> h;
+}
+
